--- a/index.html
+++ b/index.html
@@ -72,15 +72,30 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./images/notebook.jpg" alt="Ноутбук" />
+            <img
+              src="./images/notebook.jpg"
+              alt="Ноутбук"
+              width="380"
+              height="294"
+            />
             <a href=""><h3>Десктопные приложения</h3></a>
           </li>
           <li>
-            <img src="./images/phone.jpg" alt="Смартфон" />
+            <img
+              src="./images/phone.jpg"
+              alt="Смартфон"
+              width="380"
+              height="294"
+            />
             <a href=""><h3>Мобильные приложения</h3></a>
           </li>
           <li>
-            <img src="./images/monitor.jpg" alt="Монитор" />
+            <img
+              src="./images/monitor.jpg"
+              alt="Монитор"
+              width="380"
+              height="294"
+            />
             <a href=""><h3>Дизайнерские решения</h3></a>
           </li>
         </ul>
@@ -90,7 +105,12 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/john.jpg" alt="Джон Смит" />
+            <img
+              src="./images/john.jpg"
+              alt="Джон Смит"
+              width="278"
+              height="260"
+            />
             <h4>John Smith</h4>
             <p>Product Designer</p>
             <ul>
@@ -121,7 +141,12 @@
             </ul>
           </li>
           <li>
-            <img src="./images/marta.jpg" alt="Марта Стюарт" />
+            <img
+              src="./images/marta.jpg"
+              alt="Марта Стюарт"
+              width="278"
+              height="260"
+            />
             <h4>Marta Stewart</h4>
             <p>Frontend Developer</p>
             <ul>
@@ -152,7 +177,12 @@
             </ul>
           </li>
           <li>
-            <img src="./images/robert.jpg" alt="Роберт Джекис" />
+            <img
+              src="./images/robert.jpg"
+              alt="Роберт Джекис"
+              width="278"
+              height="260"
+            />
             <h4>Robert Jakis</h4>
             <p>Marketing</p>
             <ul>
@@ -183,7 +213,12 @@
             </ul>
           </li>
           <li>
-            <img src="./images/martin.jpg" alt="Мартин До" />
+            <img
+              src="./images/martin.jpg"
+              alt="Мартин До"
+              width="278"
+              height="260"
+            />
             <h4>Martin Doe</h4>
             <p>UI Designer</p>
             <ul>
